--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-/phpunit.xml
-/vendor
-/composer.json
-/composer.lock
+
 /phpunit.xml
 /composer.json
 /composer.lock
 /vendor
+/.phpunit.result.cache
